--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,19 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //noinspection GradleDependency
     // 16.0.5 available; used to be firebase-auth:16.0.1:15.0.1
+    //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-auth:16.0.1'
+    //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-core:16.0.1'
 
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    //noinspection GradleDependency
+    compile 'com.google.firebase:firebase-core:16.0.1'
+    //noinspection GradleDependency
+    compile 'com.google.firebase:firebase-database:16.0.1'
 
 
 }
