Finished YT Tut Chat
Finished YT Tutorial
- id from database appears
- R still not recognized; issue with .xml files? clean then rebuild not working, not yet compared to new project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
     //noinspection GradleDependency
-    compile 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
     //noinspection GradleDependency
-    compile 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
 
 
 }
